# sswg-mvm1.0

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Developers_Certificate_of_Origin.md  GOVERNANCE_FREEZE.md  LICENSE  LICENSE.md  README.md  REQUIREMENTS.txt  SECURITY.md  TERMINOLOGY.md  TERMS_OF_USE.md  ai_system_prompt.txt  api_contract.yaml  cli.py  cli_spec_validator.py  context7.json  deprecated_ nomenclature.md  deprecated_nomenclature.md  description.txt  execution_policy.yaml  gitignore (1)  governance.yaml  guarantees.yaml  invariants.yaml  issues.json  main.py  make_repo_zip_instructions.txt  mkdocs.yaml  mvm.yaml  project.toml  pyproject.toml  requirements.txt  root_contract.yaml  setup.sh  sswg.yaml
.VScode/: launch.json  run_linting.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
API/: core.md  evaluation.md  generator.md  graph.md  index.md  memory.md  monitoring.md  overview.md  recursion.md  routes.md  schema.md  validation.md  visualization.md  workflows.md  workflows.py
ai_conductor/: module_registry.py
ai_core/: __init__.py  ai_core.md  cli.py  dependency_core.py  dependency_graph.py  module_registry.py  optimization_loader.py  orchestrator.py  phase_controller.py  workflow.py
ai_cores/: cli_arg_parser_core.py  cli_spec_validator_core.py  dependency_core.py  deprecation_core.py  governance_core.py
ai_evaluation/: __init__.py  ai_evaluation.md  checkpoints.py  evaluation_engine.py  quality_metrics.py  scoring_adapter.py  semantic_analysis.py  verity_tensor.py
ai_graph/: __init__.py  ai_graph.md  dependency_mapper.py  recursive_flow_graph.py  semantic_network.py
ai_memory/: __init__.py  ai_memory.md  anomaly_detector.py  benchmark_evolution.py  benchmark_tracker.py  (+3 more)
(+551 files in other folders)
