[anchor]
anchor_id = "pyproject"
anchor_version = "1.2.0+mvm"
scope = "repo"
owner = "Raven Recordings"
status = "draft"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sswg-mvm"
version = "1.2.0+mvm"
description = "sswg-mvm packaging metadata"
requires-python = ">=3.10"
